Many improvements to the indexer commands design.