@@ -2,4 +2,4 @@
 # Arguments are just passed along to the Launcher.
 
 cd "$( cd -P "$( dirname "$0" )" && pwd )"
-java -server -classpath "lib/*" net.mandor.pi.Launcher $@
+java -server -Xmx32m -XX:MaxPermSize=32m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=20 -classpath "lib/*" net.mandor.pi.Launcher $@
